--- a/Assets/Scripts/Components/Components.asmdef
+++ b/Assets/Scripts/Components/Components.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:734d92eba21c94caba915361bd5ac177",
         "GUID:8266f6b7523c4144d92073658df2a6c2",
-        "GUID:d8b63aba1907145bea998dd612889d6b"
+        "GUID:d8b63aba1907145bea998dd612889d6b",
+        "GUID:e0cd26848372d4e5c891c569017e11f1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
